--- a/style.css
+++ b/style.css
@@ -6,8 +6,6 @@
     }
     .hero-container{
         background-color:  hsl(0, 0%, 100%);
-        /* Light gray: hsl(212, 45%, 89%) */
-        /* background-color: Dark rgb(12, 12, 219) hsl(217, 71%, 35%);  */
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -50,60 +48,65 @@
         color: Grayish blue hsl(220, 15%, 55%);
     }
 }
-/* @media only screen and (max-width: 375px) */
-@media only screen and (max-width: 768px){
+/* for mobile phones view */
+@media only screens and (max-width: 375px){
     *{
         margin: 0;
         padding: 0;
        
     }
-    /* .master{
-        background-color: hsl(218, 52%, 92%);
-        margin: 100px 50px;
-    } */
     .hero-container{
         background-color:  hsl(0, 0%, 100%);
-        /* background-color: Dark rgb(12, 12, 219) hsl(217, 71%, 35%);  */
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        padding: 550px 700px;
+        padding: 10px 80px;
         margin: 700px 700px; 
-        border-radius: 15px; 
+        border-radius: 10px;   
+       
     }
+    .QR-Code{
+        width: 150px;
+        border-radius: 10px;
+    }
+
     .QR-image{
         background-color: transparent;
     }
-    .QR-Code{
-        width: 500px;
-        border-radius: 10px;
-     
-    }
+
     .QR-content{
-        background-color: transparent;
+        background-color: transparent; 
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        padding-top: 30px;
-       
+        text-align: center;
+        padding: 10px 0px;
     }
     h2{
-    background-color: transparent;
-    text-align: center;
-    padding-bottom: 20px;
-    letter-spacing: 1.5px;
-    font-weight: 700;
+        background-color: transparent;
+        text-align: center;
+        font-size: 8px;
+        font-weight: 700;  
+        padding-bottom: 10px;
+        letter-spacing: 0px; 
+        line-height: 9px;
+        /* font-size: 8px; */
+        /* line-height: 7px;  */
     }
     p{
-        background-color: transparent;
-        font-size: 15px;
+        font-size: 6px;
         font-weight: 400;
-        line-height: 20px; 
-        padding-bottom: 20px;
+        line-height: 5px;
+        padding-bottom: 0px;
         text-align: center;
         color: Grayish blue hsl(220, 15%, 55%);
-         /* Light gray: hsl(212, 45%, 89%) */
+          /* font-size: 5px; */
+         /* line-height: 6px;  */
+         /* Light gray: hsl(212, 45%, 89%)  */
     }
+    .QR-content,h2,p{
+        background-color: transparent;
+    } 
 }
