--- a/style.css
+++ b/style.css
@@ -1,112 +1,35 @@
-@media only screen and (max-width: 1440px){
-    *{
-        margin: 0;
-        padding: 0;
-        background-color: hsl(218, 52%, 92%);
-    }
-    .hero-container{
-        background-color:  hsl(0, 0%, 100%);
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-       padding: 20px 0px;
-        margin: 110px 470px; 
-        border-radius: 15px;
-    }
-    .QR-image{
-        background-color: transparent;
-    }
-    .QR-Code{
-        width: 380px;
-        border-radius: 10px;
-     
-    }
-    .QR-content{
-        background-color: transparent;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        padding-top: 30px;
-       
-    }
-    h2{
-    background-color: transparent;
-    text-align: center;
-    padding-bottom: 20px;
-    letter-spacing: 1.5px;
-    font-weight: 700;
-    }
-    p{
-        background-color: transparent;
-        font-size: 15px;
-        font-weight: 400;
-        line-height: 20px; 
-        padding-bottom: 20px;
-        text-align: center;
-        color: Grayish blue hsl(220, 15%, 55%);
-    }
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
-/* for mobile phones view */
-@media only screens and (max-width: 375px){
-    *{
-        margin: 0;
-        padding: 0;
-       
-    }
-    .hero-container{
-        background-color:  hsl(0, 0%, 100%);
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        padding: 10px 80px;
-        margin: 700px 700px; 
-        border-radius: 10px;   
-       
-    }
-    .QR-Code{
-        width: 150px;
-        border-radius: 10px;
-    }
 
-    .QR-image{
-        background-color: transparent;
-    }
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-color: rgb(225, 247, 239);
+}
 
-    .QR-content{
-        background-color: transparent; 
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-        padding: 10px 0px;
-    }
-    h2{
-        background-color: transparent;
-        text-align: center;
-        font-size: 8px;
-        font-weight: 700;  
-        padding-bottom: 10px;
-        letter-spacing: 0px; 
-        line-height: 9px;
-        /* font-size: 8px; */
-        /* line-height: 7px;  */
-    }
-    p{
-        font-size: 6px;
-        font-weight: 400;
-        line-height: 5px;
-        padding-bottom: 0px;
-        text-align: center;
-        color: Grayish blue hsl(220, 15%, 55%);
-          /* font-size: 5px; */
-         /* line-height: 6px;  */
-         /* Light gray: hsl(212, 45%, 89%)  */
-    }
-    .QR-content,h2,p{
-        background-color: transparent;
-    } 
+.hero-container {
+    max-width: 400px;
+    width: 90%;
+    margin: auto;
+    padding: 20px;
+    border-radius: 10px;
+    background-color: white;
+}
+
+img {
+    width: 100%;
+}
+.QR-content{
+    padding: 10px;
+}
+.QR-content p{
+    text-align: center;
 }
